data/derived/comb/progs/unify/prog6834.ml.out
Characters 94-95:
  | buildSine -> sin(pi *. eval e x y)
                                ^
Error: This expression has type 'a but an expression was expected of type
         'a * ('b -> 'c -> 'd) * ('b -> 'c -> 'd)
       The type variable 'a occurs inside
       'a * ('b -> 'c -> 'd) * ('b -> 'c -> 'd)
